# kenobi

./: Cargo.toml
crates/kenobi/: Cargo.toml
crates/kenobi-core/: Cargo.toml
crates/kenobi-core/src/: channel_bindings.rs  cred.rs  flags.rs  lib.rs  mech.rs  typestate.rs
crates/kenobi-unix/: Cargo.toml
crates/kenobi-unix/src/: buffer.rs  channel_bindings.rs  client.rs  context.rs  cred.rs  error.rs  lib.rs  mech.rs  name.rs  server.rs  sign_encrypt.rs
crates/kenobi-unix/src/client/: builder.rs  typestate.rs
crates/kenobi-unix/src/server/: builder.rs
crates/kenobi-unix/tests/: acquire_creds.rs
crates/kenobi-windows/: Cargo.toml
crates/kenobi-windows/src/: buffer.rs  client.rs  context.rs  cred.rs  lib.rs  server.rs  sign.rs  sign_encrypt.rs
crates/kenobi-windows/src/client/: builder.rs  error.rs  typestate.rs
crates/kenobi-windows/src/server/: builder.rs  error.rs  impersonation.rs  typestate.rs
crates/kenobi-windows/tests/: authenticate_against_self.rs  two_contexts_same_cred.rs
crates/kenobi/src/: client.rs  lib.rs  server.rs  sign_encrypt.rs
crates/kenobi/src/client/: builder.rs  error.rs  typestate.rs
crates/kenobi/src/server/: builder.rs  error.rs
examples/: test.rs
src/: attributes.rs  buffer.rs  client.rs  context_handle.rs  credentials.rs  impersonate.rs  lib.rs  server.rs  settings.rs  sign_encrypt.rs  step.rs  unix.rs  windows.rs
src/client/: builder.rs  error.rs  typestate.rs
src/server/: builder.rs  impersonation.rs  typestate.rs
src/windows/: access_token.rs  attributes.rs  buffer.rs  credentials.rs  impersonate.rs  step.rs
tests/: authenticate_against_self.rs  two_contexts_same_cred.rs
