[package]
name = "kenobi-windows"
version = "0.2.0"
edition = "2024"

authors = ["Niclas Klugmann <niclas@klugmann.de>"]
description = "A Windows Negotiate implementation. Windows-only so far. WIP"
keywords = ["windows", "sspi", "kerberos", "ntlm"]
license = "MIT"
repository = "https://github.com/2ndDerivative/kenobi"

[dependencies]
windows-result = "0.4.1"

[dependencies.windows]
version = "0.62.2"
features = ["Win32_Security_Authentication_Identity", "Win32_Security_Credentials"]
