[package]
name = "kenobi"
version = "0.2.0"
authors = ["Niclas Klugmann <klugmann@heggemann.com>"]
description = "A cross-plattform Negotiate client implementation."
keywords = ["windows", "sspi", "kerberos", "ntlm"]
license = "MIT"
repository = "https://github.com/2ndDerivative/kenobi"
edition = "2024"

[dependencies]

[target.'cfg(windows)'.dependencies]
kenobi-windows = { version = "0.2.0", path = "../kenobi-windows" }

[target.'cfg(unix)'.dependencies]
kenobi-unix = { version = "0.1.0", path = "../kenobi-unix" }
