[workspace]
resolver = "3"
default-members = ["crates/kenobi"]
members = ["./crates/*"]

[workspace.package]
version = "0.3.0"
authors = ["Niclas Klugmann <niclas@klugmann.de>"]
license = "MIT"
keywords = ["authentication", "kerberos", "ntlm", "gssapi", "sspi"]
edition = "2024"
repository = "https://github.com/2ndDerivative/kenobi"
