[package]
name = "kenobi-core"
version = "0.2.0"
description = "Common markers and types for kenobi"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
native-tls = { version = "0.2.18", optional = true }

[features]
native-tls = ["dep:native-tls"]
