[package]
name = "kenobi-core"
version = "0.2.0"
description = "Common markers and types for kenobi"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
native-tls = { version = "0.2.18", optional = true }
rustls = { version = "0.23.37", default-features = false, features = [
    "std",
], optional = true }
sha2 = { version = "0.11.0", optional = true }
x509-parser = { version = "0.18.1", optional = true }

[features]
native-tls = ["dep:native-tls"]
rustls = ["dep:rustls", "dep:x509-parser", "dep:sha2"]
