[package]
name = "kenobi-windows"
version = "0.1.0"
description = "A Windows Negotiate implementation."
authors.workspace = true
license.workspace = true
keywords = ["windows", "sspi", "kerberos", "ntlm"]
edition.workspace = true
repository.workspace = true

[dependencies]
kenobi-core = { version = "0.1.0", path = "../kenobi-core" }
windows-result = "0.4.1"

[dependencies.windows]
version = "0.62.2"
features = ["Win32_Security_Authentication_Identity", "Win32_Security_Credentials"]

[features]
native-tls = ["kenobi-core/native-tls"]
