[package]
name = "kenobi"
version.workspace = true
description = "A cross-plattform Negotiate client implementation."
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
kenobi-core = { version = "0.2", path = "../kenobi-core" }

[target.'cfg(windows)'.dependencies]
kenobi-windows = { version = "0.2", path = "../kenobi-windows" }

[target.'cfg(unix)'.dependencies]
kenobi-unix = { version = "0.2", path = "../kenobi-unix" }

[features]
native-tls = ["kenobi-unix/native-tls", "kenobi-windows/native-tls"]
